@@ -99,8 +99,7 @@ ln -f -s ../coregrind/vgdb gdbserver_tests/vgdb
 # if ptrace not implemented in vgdb or OS restricts the initial attach,
 # some tests would block for a loooonnnng time.
 if gdbserver_tests/vgdb --help 2>&1 |
-    grep -e 'ptrace invoker not implemented' \
-         -e 'kernel restricts ptrace invoker' > /dev/null
+    grep -e 'ptrace invoker not implemented' > /dev/null
 then
     rm -f gdbserver_tests/vgdb.ptraceinvoker
 else
